solc_ossfuzz_seed_corpus/test_sol/test_06576471a91fe767cf495ab66a1aa3f2eef059bc55ca19eb92b6c87c6ef87aa9_25ec5522ed8b5c66e609ea02c9276381ba098ae0_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0(bytes16 i0) public   
  {
  }
  error er0(address payable ep0);
  function f1() external    returns(uint240 o0,int16 o1)
  {
  }
  error er1(uint168 ep0);
  function f2(bytes memory i0,uint88 i1,function () internal   i2) external    returns(int152 o0)
  {
  }
  error er2(function () internal   returns (bytes3) ep0);
  event ev0(uint24  ep0, bytes2  ep1);
  function f3() public    returns(int136 o0,uint200 o1)
  {
    f0(bytes16(0x4f28f48f7d50369d31f9f2c112c66cf4));
  }
}
using L0 for uint;
using L0 for uint;
using L0 for uint;
using L0 for uint;
pragma solidity >= 0.0.0;
// ----
// TypeError 4103: (su0.sol:222-247): Internal type is not allowed for public or external functions.
